# TC-Renderer

./: settings.gradle
TC-Renderer/: build.gradle
TC-Renderer/src/main/: AndroidManifest.xml
TC-Renderer/src/main/cpp/: CMakeLists.txt  Shaders.shdrs  SphereRenderer.cpp  SphereRenderer.h  TeapotNativeActivity.cpp  TeapotRenderer.h  VKSphereRenderer.cpp  VKSphereRenderer.h  gl_guards.h  stb_image.h
TC-Renderer/src/main/cpp/MPTCDecoder/: CMakeLists.txt  decoder.cpp  decoder.h  wavelet.cpp
TC-Renderer/src/main/cpp/MediaCodec/: CMakeLists.txt  native-codec-jni.cpp
TC-Renderer/src/main/cpp/ObjLoader/: objloader.hpp  vboindexer.hpp
TC-Renderer/src/main/cpp/VulkanTest/: CMakeLists.txt
TC-Renderer/src/main/cpp/gpu/: CMakeLists.txt  validation_layer.cpp  validation_layer.hpp  vk_gpu.cpp  vk_gpu.h  vk_guards.h  vk_utils.h
TC-Renderer/src/main/java/com/sample/teapot/: SceneNativeActivity.java  Sphere360Application.java  UILib.java
TC-Renderer/src/main/res/layout/: widgets.xml
common/ndk_helper/: CMakeLists.txt  GLContext.cpp  GLContext.h  JNIHelper.cpp  NDKHelper.h  shader.cpp  shader.h  tapCamera.h
gradle/wrapper/: gradle-wrapper.properties
